RESOLVED FIXED57814
Print stylesheet on nytimes.com loads too early
https://bugs.webkit.org/show_bug.cgi?id=57814
Summary Print stylesheet on nytimes.com loads too early
Antti Koivisto
Reported 2011-04-04 22:03:55 PDT
We try to give print stylesheets a very low priority but the one in nytimes.com still ends up loaded early.
Attachments
patch (3.70 KB, patch)
2011-04-04 22:12 PDT, Antti Koivisto
sam: review+
Antti Koivisto
Comment 1 2011-04-04 22:12:01 PDT
Created attachment 88183 [details] patch Don't load resources with Very Low priority until there are no other resources to load for the host (or until document is complete enough that we stop limiting requests). No tests, this is difficult to observe reliably with our current testing infrastructure. Verified working with Wireshark.
Antti Koivisto
Comment 2 2011-04-04 22:14:24 PDT
Antti Koivisto
Comment 3 2011-04-05 10:20:22 PDT
Note You need to log in before you can comment on or make changes to this bug.