Print stylesheet on nytimes.com loads too early https://bugs.webkit.org/show_bug.cgi?id=57814

Reviewed by Sam Weinig.

Don't load resources with Very Low priority until there are no other resources to
load for the host (or until document is complete enough that we stop limiting requests).

No tests, this is  difficult to observe reliably with our current testing infrastructure.
Verified working with Wireshark.

* loader/ResourceLoadScheduler.cpp:
(WebCore::ResourceLoadScheduler::servePendingRequests):
(WebCore::ResourceLoadScheduler::HostInformation::limitRequests):
* loader/ResourceLoadScheduler.h:



Canonical link: https://commits.webkit.org/72734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82951 268f45cc-cd09-0410-ab3c-d52691b4dbfc